Fixed spacing

--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ nav ul {
 
 h1 {
 	margin: 1%;
-	margin-top: 1em; 
+	margin-top: 1.5em; 
 	font-size: 200%;
 	color: #88c0d0;
 }
